--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,147 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App{
   min-height: 100vh;
+  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
+}
+img{
+  width: 100%;
+  object-fit: cover;
+  /* border-radius: 50%; */
+}
+
+.navbar{
+  background-color: rgb(144, 224, 144);
+  padding: 1em ;
+}
+.search-form{
+  min-height: 20vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-image: url(./images/food.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 60%;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.search-bar{
+  width: 30%;
+  border: none;
+  padding: 0.6em;
+  border: 2px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-button{
+  padding: 0.6em 1.2em;
+  background: lightcoral;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  transition: transform 200ms ease;
+  border: 2px solid black;
+}
+.search-button:hover{
+  color: #fff;
+  transform: scale(0.95);
+}
+
+.search-button::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: blueviolet;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  transform: scaleY(0);
+  transform-origin: bottom;
+  transition: transform 200ms ease;
+}
+.search-button:hover::after{
+  transform: scaleY(1);
+  transform-origin: top;
+}
+
+
+.recipes{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  background: #D3CCE3;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.recipe{
+  /* border: 2px solid black; */
+  box-shadow: 10px 16px 37px -30px rgba(0,0,0,0.52);
+-webkit-box-shadow: 10px 16px 37px -30px rgba(0,0,0,0.52);
+-moz-box-shadow: 10px 16px 37px -30px rgba(0,0,0,0.52);
+  width: 22%;
+  height: max-content;
+  margin: 1em auto;
+  text-align: center;
+  transition: all 200ms ease;
+  background-color: hsl(0, 0%, 90%);;
+  position: relative;
+  z-index: 1;
+
+}
+.recipe:hover{
+  transform: scale(1.002);
+  background-color: hsl(0, 0%, 90%);
+}
+.title a:hover{
+  text-decoration: underline;
+}
+.title a{
+  text-decoration: none;
+  color: rgb(39, 39, 131);
+}
+.recipe h4{
+  text-align: left;
+  padding: 0 0.5em;
+}
+.recipe-img{
+  overflow: hidden;
+  width: 100%;
+  max-width: 180px;
+  border: 2px solid black;
+  border-radius: 50%;
+  margin: 0 auto; 
+}
+.recipe img{
+  transition: transform 200ms ease;
+  object-fit: cover;
+}
+.recipe img:hover{
+  /* transform: scale(1.2); */
+}
+.ingredients{
+  text-align: left;
+  padding: 0 1.5em;
+}
+
+@media (max-width: 765px) {
+    .recipes{
+      flex-direction: column;
+    }
+    .recipe{
+      width: 80%;
+    }
+    .search-form{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
 }
