--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
 img{
   width: 100%;
   object-fit: cover;
-  /* border-radius: 50%; */
 }
 
 .navbar{
@@ -23,7 +22,7 @@ img{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(./images/food.svg);
+  background-image: url('./images/food.svg');
   background-size: contain;
   background-repeat: no-repeat;
   width: 60%;
@@ -44,11 +43,13 @@ img{
   cursor: pointer;
   position: relative;
   z-index: 1;
-  transition: transform 200ms ease;
+  transition: transform 100ms ease;
   border: 2px solid black;
 }
 .search-button:hover{
   color: #fff;
+}
+.search-button:active{
   transform: scale(0.95);
 }
 
@@ -70,78 +71,12 @@ img{
   transform-origin: top;
 }
 
-
 .recipes{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   background: #D3CCE3;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-
-.recipe{
-  /* border: 2px solid black; */
-  box-shadow: 10px 16px 37px -30px rgba(0,0,0,0.52);
--webkit-box-shadow: 10px 16px 37px -30px rgba(0,0,0,0.52);
--moz-box-shadow: 10px 16px 37px -30px rgba(0,0,0,0.52);
-  width: 22%;
-  height: max-content;
-  margin: 1em auto;
-  text-align: center;
-  transition: all 200ms ease;
-  background-color: hsl(0, 0%, 90%);;
-  position: relative;
-  z-index: 1;
-
-}
-.recipe:hover{
-  transform: scale(1.002);
-  background-color: hsl(0, 0%, 90%);
-}
-.title a:hover{
-  text-decoration: underline;
-}
-.title a{
-  text-decoration: none;
-  color: rgb(39, 39, 131);
-}
-.recipe h4{
-  text-align: left;
-  padding: 0 0.5em;
-}
-.recipe-img{
-  overflow: hidden;
-  width: 100%;
-  max-width: 180px;
-  border: 2px solid black;
-  border-radius: 50%;
-  margin: 0 auto; 
-}
-.recipe img{
-  transition: transform 200ms ease;
-  object-fit: cover;
-}
-.recipe img:hover{
-  /* transform: scale(1.2); */
-}
-.ingredients{
-  text-align: left;
-  padding: 0 1.5em;
-}
-
-@media (max-width: 765px) {
-    .recipes{
-      flex-direction: column;
-    }
-    .recipe{
-      width: 80%;
-    }
-    .search-form{
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-    }
+  background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
