--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ img{
   transition: transform 100ms ease;
   border: 2px solid black;
 }
-.search-button:hover{
+.search-button:hover, .search-button:focus{
   color: #fff;
 }
 .search-button:active{
@@ -69,7 +69,7 @@ img{
   transform-origin: bottom;
   transition: transform 200ms ease;
 }
-.search-button:hover::after{
+.search-button:hover::after, .search-button:focus::after{
   transform: scaleY(1);
   transform-origin: top;
 }
